tests/parser/should_compile/read028.hs
module ShouldCompile where

data T a b = (:^:) a b
