tests/parser/should_fail/T3811g.hs

module T3811g where

f :: IO ()
f = do _ <- return ()
       _ <- return ()

